@@ -64,7 +64,7 @@ public class MatchedJobEmailService {
 		Path resumePath = resourcePathResolver.resolveExternalPath(userProperties.getResumePath());
 		AtomicInteger successCount = new AtomicInteger();
 
-		ExecutorService executorService = Executors.newFixedThreadPool(5);
+		ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 		List<Future<?>> futures = new ArrayList<>();
 
 		for (MatchedEmailTask task : tasks) {
